# test-lockfiles

babel-loader-test/: package-lock.json
bytesafe-source-repo-demo/: .npmrc  package-lock.json  package.json
espree-dependencies/es-npm-6/: package-lock.json  package.json
espree-dependencies/es-npm-8/: package-lock.json  package.json
espree-dependencies/es-pnpm/: package.json  pnpm-lock.yaml
espree-dependencies/es-yarn-1/: package.json
espree-dependencies/es-yarn-2/: package.json
maven/basic/: pom.xml
nuget-lock/MyApp/: MyApp.csproj  packages.lock.json
nuget-lockproj/TestApp/: TestApp.csproj  packages.lock.json
nuget-packages-config/MyApp/: MyApp.csproj  Program.cs
python/none/: pyproject.toml
python/pip-no-pyproject/: requirements.txt
python/poetry/: pyproject.toml
react-dependencies/npm-6/: package-lock.json  package.json
react-dependencies/npm-8/: package-lock.json  package.json
react-dependencies/pnpm/: package.json  pnpm-lock.yaml
react-dependencies/yarn-1/: package.json
react-dependencies/yarn-2/: package.json
react-plus/yarn-one/: package.json
webpack-dependencies/: package-lock.json  package.json
webpack-dependencies/webpack-8/: package-lock.json  package.json
