[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_bytesafe"
version = "0.0.2"
authors = [
    { name="Andreas Bielk", email="andreas@bytesafe.dev" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bitfront-se/python_packaging_example"
"Bug Tracker" = "https://github.com/bitfront-se/python_packaging_example/issues"
